--- a/gateway.properties
+++ b/gateway.properties
@@ -3,6 +3,9 @@ server.port=8080
 # Application name
 spring.application.name=gateway
 
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+
 #Pour le service user-manager
 spring.cloud.gateway.routes[0].id=user-manager-api
 spring.cloud.gateway.routes[0].uri=http://localhost:8081/
