--- a/gateway.properties
+++ b/gateway.properties
@@ -3,8 +3,9 @@ server.port=8080
 # Application name
 spring.application.name=gateway
 
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.api-docs.path=/api-docs
 
 #Pour le service main-server
 spring.cloud.gateway.routes[0].id=main-server
